--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Diamond Triangle</h1>
+			<h1>Diamond Recursion</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Recursive diamonds
+		    Recursively drawn diamonds
 	    </footer>
 	</body>
 </html>
